Swap filter label for placeholder text.

--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -64,8 +64,7 @@
                <top>
                   <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Filter" />
-                        <TextField fx:id="filterText" onAction="#filterTextChanged" prefHeight="28.0" prefWidth="214.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="filterText" onAction="#filterTextChanged" prefHeight="28.0" prefWidth="214.0" promptText="search emails" HBox.hgrow="ALWAYS" />
                         <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false">
                             <graphic>
                                 <ImageView fitHeight="17.0" fitWidth="17.0">
