--- a/src/main/resources/style/speedr.css
+++ b/src/main/resources/style/speedr.css
@@ -33,6 +33,9 @@ Label {
     -fx-border-style: solid;
     -fx-border-insets: 2px, 5px, 2px, 5px;
     -fx-opacity: 0.7;
+    -fx-text-fill: black;
+    -fx-stroke: black;
+    -fx-stroke-width: 2;
 }
 
 .list-cell:filled.unread {
@@ -41,20 +44,9 @@ Label {
 }
 
 .list-cell:selected, .list-cell:focused {
-    -fx-padding: 10 10 10 10;
-    -fx-background-color: linear-gradient(#FFFFFF, #F6F6F6);
-
-    -fx-border-color: #DDDDDD #DDDDDD #AAAAAA #68d65c;
+    -fx-border-color: #DDDDDD #DDDDDD #AAAAAA #68d65c !important;
     -fx-border-width: 1px 1px 2px 3px;
-    -fx-border-style: solid;
-    -fx-border-insets: 2px, 5px, 2px, 15px;
-
-    -fx-text-fill: black;
-    -fx-stroke: black;
-    -fx-stroke-width: 2;
-
     -fx-opacity: 1.0;
-
     -fx-font-weight: bold;
 }
 
