--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -93,6 +93,18 @@
                 </BorderPane>
             <StackPane focusTraversable="true" styleClass="theatre-box">
                <children>
+                  <VBox alignment="BOTTOM_LEFT" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label id="errorBox" fx:id="errorBox" maxWidth="1.7976931348623157E308" prefHeight="38.0" prefWidth="722.0" text="Error" visible="false">
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                  </VBox>
                       <BorderPane fx:id="readerPane" focusTraversable="true" visible="false">
                           <center>
                               <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
